--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 .modal{
   font-family:"MidnightLetters";
-  z-index: 999;
+  z-index: 998;
   position:absolute;
   top: 50%;
   left:50%;
@@ -45,7 +45,36 @@
   color:#ffffff;
 }
 
+.return{
+  font-family:"MidnightLetters";
+  z-index: 999;
+  position:absolute;
+  left:50%;
+  width:100%;
+  max-width: 700px;
+  display:inline;
+}
+.Rbutton {
+  font-family: "MidnightLetters";
+  font-size: 2rem;
+  position: fixed;
+  top: 10px;
+  color: #ffffff;
+  padding: 10px;
+  border-color: white;
+  border-width: 1px;
+  background-color: rgba(255, 255, 255, 0);
+  border-style: groove;
+  right: 10px;
+  transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+  display: none;
+}
 
+.Rbutton:hover{
+  background-color: #ffffff;
+  color: #0a1027;
+  transform: scale(1.1);
+}
 
 .material-symbols-outlined {
   background-color:transparent;
@@ -58,6 +87,20 @@
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+
+  font-size: small;
+  background-color: #0a10276b;
+  color: white;
+  text-align: center;
+  padding: 15px;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.3);
 }
 
 
